--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ inst/rmarkdown/templates/cynkra_report/skeleton/*.log
 inst/rmarkdown/templates/cynkra_report/skeleton/*.pdf
 inst/rmarkdown/templates/cynkra_report/skeleton/skeleton.tex
 inst/rmarkdown/templates/cynkra_report/skeleton/skeleton2.tex
-
+.Rproj.user
