--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: Easy Generation of Customized RMardown Templates
 LazyData: TRUE
 Imports:
     knitr (>= 1.12),
-    rmarkdown
+    rmarkdown,
+    usethis
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Encoding: UTF-8
