notes on customization

--- a/inst/skeleton/inst/indiedown/default.yaml
+++ b/inst/skeleton/inst/indiedown/default.yaml
@@ -1,3 +1,5 @@
+# indiedown: customize defaults in YAML header here
+
 indent: false
 compact-title: true
 subparagraph: true  # needed for titlesec
