--- a/inst/mypackage/DESCRIPTION
+++ b/inst/mypackage/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: <<pkg_name>>
+Package: mypackage
 Title: What the Package Does (One Line, Title Case)
 Version: 0.1
 Authors@R: person("First", "Last", email = "first.last@example.com",
