--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ inst/rmarkdown/templates/cynkra_report/skeleton/skeleton.tex
 inst/rmarkdown/templates/cynkra_report/skeleton/skeleton2.tex
 .Rproj.user
 inst/doc
+docs
