--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,42 +1,46 @@
-Package: indiedown
 Type: Package
+Package: indiedown
 Title: Individual RMarkdown Templates
 Version: 0.0.1
-Authors@R: c(
-    person(given = "Christoph",
-           family = "Sax",
-           role = c("aut", "cre"),
-           email = "christoph.sax@gmail.com",
-           comment = c(ORCID = "0000-0002-7192-7044")),
-    person(given = "Kirill",
-           family = "Müller",
-           role = c("aut"),
-           comment = c(ORCID = "0000-0002-1416-3412")),
-    person(given = "Angelica",
-           family = "Becerra",
-           role = c("aut")),
-    person(given = "Frederik",
-           family = "Aust",
-           role = c("aut")),
-    person(given = "cynkra GmbH",
-       role = c("fnd", "cph"),
-       email = "mail@cynkra.com"))
-Description: Simplifies the generation of customized RMarkdown templates. Provides a package skeleton with instructions for customizations.
-LazyData: TRUE
-Depends: R (>= 4.0.0)
+Authors@R: 
+    c(person(given = "Christoph",
+             family = "Sax",
+             role = c("aut", "cre"),
+             email = "christoph.sax@gmail.com",
+             comment = c(ORCID = "0000-0002-7192-7044")),
+      person(given = "Kirill",
+             family = "Müller",
+             role = "aut",
+             comment = c(ORCID = "0000-0002-1416-3412")),
+      person(given = "Angelica",
+             family = "Becerra",
+             role = "aut"),
+      person(given = "Frederik",
+             family = "Aust",
+             role = "aut"),
+      person(given = "cynkra GmbH",
+             role = c("fnd", "cph"),
+             email = "mail@cynkra.com"))
+Description: Simplifies the generation of customized RMarkdown
+    templates. Provides a package skeleton with instructions for
+    customizations.
+License: MIT + file LICENSE
+Depends: 
+    R (>= 4.0.0)
 Imports:
-    knitr (>= 1.12),
-    rmarkdown,
+    fs,
     gfonts,
-    fs
+    knitr (>= 1.12),
+    rmarkdown
 Suggests:
-    usethis,
+    spelling,
     testthat (>= 3.0.0),
-    spelling
+    usethis
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
+Encoding: UTF-8
+Language: en-US
+LazyData: TRUE
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Encoding: UTF-8
-VignetteBuilder: knitr
-Config/testthat/edition: 3
-License: MIT + file LICENSE
-Language: en-US
