--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -97,6 +97,7 @@ jobs:
           remotes::install_deps(dependencies = TRUE, type = .Platform$pkgType)
           remotes::install_github("r-lib/pkgdown")
           # Begin custom: dep install
+          remotes::install_github("cynkra/cynkratemplate")
           # End custom: dep install
         shell: Rscript {0}
 
