--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,11 +32,11 @@ Imports:
     gfonts,
     knitr (>= 1.12),
     rmarkdown,
+    usethis,
     withr
 Suggests:
     spelling,
-    testthat (>= 3.0.0),
-    usethis
+    testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
