--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,9 @@ Description: Simplifies the generation of customized RMarkdown
     templates. Provides a package skeleton with instructions for
     customizations.
 License: MIT
+URL: https://cynkra.github.io/indiedown,
+    https://github.com/cynkra/indiedown
+BugReports: https://github.com/cynkra/indiedown/issues
 Depends: 
     R (>= 4.0.0)
 Imports:
