--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,12 +37,17 @@ Imports:
     rmarkdown,
     usethis,
     withr
-Suggests:
+Suggests: 
+    callr,
+    rcmdcheck,
     spelling,
     testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
+Config/testthat/parallel: true
+Config/testthat/start-first: 
+    check
 Encoding: UTF-8
 Language: en-US
 LazyData: TRUE
