--- a/inst/mypackage/DESCRIPTION
+++ b/inst/mypackage/DESCRIPTION
@@ -5,10 +5,10 @@ Authors@R: person("First", "Last", email = "first.last@example.com",
                   role = c("aut", "cre"))
 Description: What the package does (one paragraph)
 Depends: R (>= 4.0.0)
-License: What license is it under?
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.1.9001
 Imports: 
-    glue
+    glue, knitr, rmarkdown, withr, yaml, utils
