Revert "Don't need file LICENSE"
This reverts commit a45a918fef86f3c3d19cbea872b5b5161c38ea70.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Authors@R:
 Description: Simplifies the generation of customized RMarkdown
     templates. Provides a package skeleton with instructions for
     customizations.
-License: MIT
+License: MIT + file LICENSE
 URL: https://cynkra.github.io/indiedown,
     https://github.com/cynkra/indiedown
 BugReports: https://github.com/cynkra/indiedown/issues
