More detailed description
CRAN comment: Please add more details about the package functionality and implemented methods in your Description text.

@krlmlr could you review this?

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,12 @@ Authors@R:
       person(given = "cynkra GmbH",
              role = c("fnd", "cph"),
              email = "mail@cynkra.com"))
-Description: Simplifies the generation of customized R Markdown
-    templates. Provides a package skeleton with instructions for
-    customizations.
+Description: Simplifies the generation of customized R Markdown PDF templates.
+    A template may include an individual logo, typography, geometry or color
+    scheme. The package provides a skeleton with detailed instructions for
+    customizations. The skeleton can be modified by changing defaults in the
+    'YAML' header, by adding additional 'LaTeX' commands or by applying dynamic
+    adjustments in R. Individual corporate design elements, such as a title page, can be added as 'LaTeX'-producing R functions.
 License: MIT + file LICENSE
 URL: https://cynkra.github.io/indiedown/,
     https://github.com/cynkra/indiedown
