--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,3 +58,5 @@ Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Config/Needs/website: cynkra/cynkratemplate
+Config/autostyle/scope: line_breaks
+Config/autostyle/strict: true
