--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -149,7 +149,7 @@ jobs:
       - uses: ./.github/workflows/install
         with:
           r-version: ${{ matrix.config.r }}
-          cache-version: rcc-main-1
+          cache-version: rcc-windows-1
           token: ${{ secrets.GITHUB_TOKEN }}
           needs: check
 
@@ -209,7 +209,7 @@ jobs:
       - uses: ./.github/workflows/install
         with:
           r-version: ${{ matrix.config.r }}
-          cache-version: rcc-main-1
+          cache-version: rcc-full-1
           token: ${{ secrets.GITHUB_TOKEN }}
           needs: check
 
