--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -137,6 +137,8 @@ jobs:
       matrix:
         config:
           - {os: windows-latest, r: 'release'}
+          # Use 3.6 to trigger usage of RTools35
+          - {os: windows-latest, r: '3.6'}
 
     steps:
       - uses: actions/checkout@v3
@@ -187,12 +189,15 @@ jobs:
           - {os: ubuntu-22.04,   r: 'oldrel-1'}
 
           # Begin custom: R 3.6
+          - {os: ubuntu-22.04,   r: 'oldrel-2'}
           # End custom: R 3.6
 
           # Begin custom: R 3.5
+          - {os: ubuntu-22.04,   r: 'oldrel-3'}
           # End custom: R 3.5
 
           # Begin custom: R 3.4
+          - {os: ubuntu-22.04,   r: 'oldrel-4'}
           # End custom: R 3.4
 
           # Begin custom: matrix elements
